services/wire-gitlab-bot/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wire-gitlab-bot
  namespace: serves
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: wire-gitlab-bot
    spec:
      containers:
      - name: container-wire-gitlab
        image: registry.gitlab.com/fluidattacks/default:gitlab
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 128m
            memory: 128Mi
          limits:
            cpu: 256m
            memory: 256Mi
