services/wire-gitlab-bot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wire-gitlab-bot
  namespace: serves
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wire-gitlab-bot
