services/wire-gitlab-bot/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wire-gitlab-bot
  namespace: serves
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - wire-gitlab-bot.fluidattacks.com
    secretName: wire-gitlab-bot-cert
  rules:
  - host: wire-gitlab-bot.fluidattacks.com
    http:
      paths:
      - backend:
          serviceName: wire-gitlab-bot
          servicePort: 80
